--- a/src/posts/env-to-docker-build.mdx
+++ b/src/posts/env-to-docker-build.mdx
@@ -3,6 +3,7 @@ title: Dyanmic ENV in docker builds
 tags: docker
 summary: Hardcoded ENV values can be a tedious solution if they need to be changed often
 date: 2023-03-13
+origin: https://vsupalov.com/docker-build-pass-environment-variables/
 ---
 
 Hardcoded ENV values can be a tedious solution if they need to be changed often. Imagine having to edit your Dockerfile again and again with each build.
@@ -18,8 +19,3 @@ the `env_var_name` environment variable value passed with `var_name` will be ava
 <br />
 They are merely default values after all.
 
----
-
-Originally posted [here][source]
-
-[source]: https://vsupalov.com/docker-build-pass-environment-variables/
