--- a/src/posts/port-5000-macos.mdx
+++ b/src/posts/port-5000-macos.mdx
@@ -1,7 +1,7 @@
 ---
-title: Port 5000 busy by macOS control centre
-tags: mac, macos, networking
-summary: Port 5000 busy? No problem.
+title: Busy Port 5000 on macOS
+tags: mac,scripting,networking,bash
+summary: Understand why port 5000 may be occupied on macOS and learn how to fix this behaviour
 date: 2023-03-12
 ---
 
