--- a/src/posts/github/delete-all-deployments.mdx
+++ b/src/posts/github/delete-all-deployments.mdx
@@ -1,7 +1,7 @@
 ---
-title: Delete all github deployments
+title: "Github: Delete all repository deployments"
 tags: github, workflows, github-actions, git, script
-summary: Sometimes you just want to delete all github deployments
+summary: Sometimes you just want to delete all your deployments
 date: 2023-03-14
 ---
 
