--- a/src/posts/github/get-next-build-number.mdx
+++ b/src/posts/github/get-next-build-number.mdx
@@ -1,7 +1,7 @@
 ---
-title: Github Actions: Get the next build number
+title: "Github Actions: Get the next build number"
 tags: github-actions,github,ci,bash
-summary: How to get the next build number for a specific branch
+summary: "How to get the next build number for a specific branch"
 date: 2023-04-06
 ---
 
