--- a/src/posts/npm/next-wayfinder.mdx
+++ b/src/posts/npm/next-wayfinder.mdx
@@ -80,6 +80,6 @@ export default handlePaths(
 This is a full example of what [next-wayfinder][repo] has to offer to you.
 If you think that it could improve your workflow, please give it a try and let me know what you think!
 
-> [rawnly/next-wayfinder][repo]
+> [][repo]
 
 [repo]: https://github.com/rawnly/next-wayfinder
