--- a/src/posts/react/radix-ui-popover-size.mdx
+++ b/src/posts/react/radix-ui-popover-size.mdx
@@ -1,7 +1,7 @@
 ---
-title: Radix UI Popover - Make the width the same as the trigger
+title: Ensure Radix UI Popover width matches trigger
 date: 2023-03-29
-summary: In this article we will show you how to make the width of the popover the same as the trigger.
+summary: Learn to match popover width with trigger
 tags: react,typescript,radix-ui,web
 ---
 
